--- a/config/sync/default/editor.editor.full_html.yml
+++ b/config/sync/default/editor.editor.full_html.yml
@@ -24,6 +24,7 @@ settings:
       - link
       - '|'
       - drupalInsertImage
+      - insertTable
   plugins:
     ckeditor5_heading:
       enabled_headings:
