--- a/config/sync/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/default/core.entity_view_display.node.article.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
+    - field.field.node.article.field_event_images
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.medium
@@ -51,5 +52,6 @@ content:
     weight: 100
     region: content
 hidden:
+  field_event_images: true
   field_image: true
   field_tags: true
