--- a/config/sync/default/metatag.metatag_defaults.global.yml
+++ b/config/sync/default/metatag.metatag_defaults.global.yml
@@ -15,8 +15,8 @@ tags:
   geo_region: US-MA
   icbm: '42.3601, -71.0589'
   title: '[current-page:title] | [site:name]'
-  twitter_cards_description: 'Big Day Boston downtown birding competition'
-  twitter_cards_image: 'https://bigdayboston.com/themes/icons/logo-circle--medium--white-bg.png'
+  twitter_cards_description: 'Big Day Boston 2024 is in the books! What a great day. The weather cooperated, a variety of Warblers were in town, 30+ t-shirts were made, and everyone had a splendid time!'
+  twitter_cards_image: 'https://bdbassets.nyc3.digitaloceanspaces.com/styles/medium_square/s3/group-photo.jpg?itok=h35WPvA3'
   twitter_cards_image_alt: 'Big Day Boston downtown birding competition'
   twitter_cards_page_url: '[current-page:url]'
   twitter_cards_site: '@bigdayboston'
