--- a/config/sync/default/metatag.metatag_defaults.node.yml
+++ b/config/sync/default/metatag.metatag_defaults.node.yml
@@ -9,7 +9,10 @@ label: Content
 tags:
   description: '[node:summary]'
   title: '[node:title] | [site:name]'
-  twitter_cards_description: '[node:body]'
-  twitter_cards_image: 'https://bigdayboston.com/themes/icons/logo-circle.png'
+  twitter_cards_creator: '@bigdayboston'
+  twitter_cards_description: '[node:summary]'
+  twitter_cards_image: '[node:field_image:large:url]'
+  twitter_cards_page_url: '[current-page:url]'
   twitter_cards_site: '@bigdayboston'
+  twitter_cards_title: '[current-page:title]'
   twitter_cards_type: summary_large_image
