--- a/config/sync/default/metatag.metatag_defaults.node__article.yml
+++ b/config/sync/default/metatag.metatag_defaults.node__article.yml
@@ -5,6 +5,9 @@ dependencies: {  }
 id: node__article
 label: 'Content: Article'
 tags:
-  twitter_cards_description: '[node:body]'
-  twitter_cards_image: '[node:field_image:large:url]'
+  twitter_cards_creator: '@bigdayboston'
+  twitter_cards_description: '[node:summary]'
+  twitter_cards_image: 'https://bdbassets.nyc3.digitaloceanspaces.com/styles/wide/s3/group-photo.jpg?itok=UnWTMjEO'
+  twitter_cards_page_url: '[current-page:url]'
+  twitter_cards_title: '[node:title]'
   twitter_cards_type: summary_large_image
