--- a/config/sync/default/metatag.settings.yml
+++ b/config/sync/default/metatag.settings.yml
@@ -1,11 +1,15 @@
-entity_type_groups: {  }
+entity_type_groups:
+  node:
+    article:
+      twitter_cards: twitter_cards
 tag_trim_method: beforeValue
+use_maxlength: true
 tag_trim_maxlength:
   metatag_maxlength_title: null
   metatag_maxlength_description: null
   metatag_maxlength_abstract: null
-  metatag_maxlength_twitter_cards_label2: null
-  metatag_maxlength_twitter_cards_label1: null
   metatag_maxlength_twitter_cards_description: null
   metatag_maxlength_twitter_cards_title: null
+  metatag_maxlength_twitter_cards_label1: null
+  metatag_maxlength_twitter_cards_label2: null
 tag_scroll_max_height: ''
