--- a/config/sync/default/core.entity_view_display.node.event_report.default.yml
+++ b/config/sync/default/core.entity_view_display.node.event_report.default.yml
@@ -52,6 +52,7 @@ content:
       fullscreen: false
       hide_scrollbars: true
       inline: true
+      selector: .baguettebox
     third_party_settings: {  }
     weight: 3
     region: content
