--- a/web/modules/custom/bdb_content/bdb_content.info.yml
+++ b/web/modules/custom/bdb_content/bdb_content.info.yml
@@ -5,4 +5,4 @@ type: module
 dependencies:
   - event:event
   - registration:registration
-core_version_requirement: ^10
+core_version_requirement: ^10 || ^11
