--- a/composer.json
+++ b/composer.json
@@ -13,25 +13,25 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/baguettebox": "^2.0",
+        "drupal/baguettebox": "*",
         "drupal/config_split": "^2",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
         "drupal/google_analytics": "^4.0",
         "drupal/honeypot": "^2.1",
-        "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/inline_entity_form": "^3",
         "drupal/key": "^1.17",
-        "drupal/mail_login": "^3",
-        "drupal/metatag": "^1.22",
+        "drupal/mail_login": "^4",
+        "drupal/metatag": "^2",
         "drupal/pathauto": "^1.11",
         "drupal/readonly_field_widget": "^1.5",
         "drupal/recaptcha": "^3.1",
-        "drupal/recaptcha_v3": "^1.7",
+        "drupal/recaptcha_v3": "^2",
         "drupal/redirect": "^1.8",
         "drupal/s3fs": "^3.0",
-        "drupal/simple_sitemap": "^4.1",
+        "drupal/simple_sitemap": "^4.2",
         "drupal/smtp": "^1.2",
-        "drush/drush": "^12",
+        "drush/drush": "*",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "conflict": {
@@ -84,11 +84,7 @@
                 "type:drupal-custom-theme"
             ]
         },
-        "patches": {
-            "drupal/google_analytics": {
-                "3373921 - Cannot install from existing config": "https://git.drupalcode.org/project/google_analytics/-/merge_requests/33.diff"
-            }
-        }
+        "patches": {}
     },
     "scripts": {
         "lint": "./vendor/bin/phpcs --standard=PSR12 ./web/modules/custom ./scripts",
