--- a/config/sync/default/mail_login.settings.yml
+++ b/config/sync/default/mail_login.settings.yml
@@ -1,5 +1,6 @@
 _core:
   default_config_hash: '-KUHvK41874dR8ws5xDInaInXrYYenLc9pRyKirSJUg'
+langcode: en
 mail_login_enabled: 1
 mail_login_case_sensitive: 1
 mail_login_email_only: 0
