--- a/config/sync/default/views.view.my_registrations.yml
+++ b/config/sync/default/views.view.my_registrations.yml
@@ -171,6 +171,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          pagination_heading_level: h4
       exposed_form:
         type: basic
         options:
@@ -212,7 +213,7 @@ display:
           admin_label: ''
           entity_type: registration
           entity_field: uid
-          plugin_id: numeric
+          plugin_id: entity_target_id
           default_action: default
           exception:
             value: all
@@ -238,6 +239,7 @@ display:
           validate_options: {  }
           break_phrase: false
           not: false
+          target_entity_type_id: user
       filters: {  }
       style:
         type: default
