--- a/web/modules/custom/event/event.info.yml
+++ b/web/modules/custom/event/event.info.yml
@@ -6,4 +6,4 @@ dependencies:
   - drupal:datetime
   - drupal:editor
   - drupal:filter
-core_version_requirement: ^10
+core_version_requirement: ^10 || ^11
