--- a/web/themes/custom/bdb/bdb.info.yml
+++ b/web/themes/custom/bdb/bdb.info.yml
@@ -66,5 +66,5 @@ libraries-extend:
     - bdb/drupal.node.preview
   content_moderation/content_moderation:
     - bdb/content_moderation
-core_version_requirement: ^10
+core_version_requirement: ^10 || ^11
 generator: 'bdb:10.0.0'
