--- a/config/sync/default/metatag.metatag_defaults.global.yml
+++ b/config/sync/default/metatag.metatag_defaults.global.yml
@@ -15,7 +15,7 @@ tags:
   geo_region: US-MA
   icbm: '42.3601, -71.0589'
   title: '[current-page:title] | [site:name]'
-  twitter_cards_description: 'Big Day Boston 2024 is in the books! What a great day. The weather cooperated, a variety of Warblers were in town, 30+ t-shirts were made, and everyone had a splendid time!'
+  twitter_cards_description: 'Big Day Boston - May 3rd 2025 - the friendly Downtown birding competition. Registration for 2025 now open!'
   twitter_cards_image: 'https://bdbassets.nyc3.digitaloceanspaces.com/styles/medium_square/s3/group-photo.jpg?itok=h35WPvA3'
   twitter_cards_image_alt: 'Big Day Boston downtown birding competition'
   twitter_cards_site: '@bigdayboston'
