--- a/config/sync/default/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/default/core.menu.static_menu_link_overrides.yml
@@ -7,3 +7,9 @@ definitions:
     weight: 0
     expanded: false
     enabled: false
+  entity__registration__register:
+    weight: -47
+    menu_name: main
+    parent: ''
+    expanded: false
+    enabled: true
