--- a/config/sync/default/views.view.admin_registrations.yml
+++ b/config/sync/default/views.view.admin_registrations.yml
@@ -404,10 +404,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              content_editor: '0'
-              administrator: '0'
-              birder: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -460,6 +456,7 @@ display:
           empty_table: false
           caption: ''
           description: ''
+          class: ''
       row:
         type: fields
       query:
