--- a/config/sync/default/views.view.people_details.yml
+++ b/config/sync/default/views.view.people_details.yml
@@ -614,8 +614,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -659,8 +657,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
           is_grouped: true
           group_info:
             label: Status
@@ -707,8 +703,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -749,8 +743,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -876,10 +868,6 @@ display:
             multiple: true
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              content_editor: '0'
-              administrator: '0'
-              birder: '0'
             min_placeholder: ''
             max_placeholder: ''
             placeholder: ''
@@ -948,10 +936,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              content_editor: '0'
-              administrator: '0'
-              birder: '0'
             min_placeholder: 'CCYY-MM-DD HH:MM:SS'
             max_placeholder: 'CCYY-MM-DD HH:MM:SS'
             placeholder: 'CCYY-MM-DD HH:MM:SS'
@@ -1048,6 +1032,7 @@ display:
           empty_table: true
           caption: ''
           description: ''
+          class: ''
       row:
         type: fields
       query:
