--- a/config/sync/default/block.block.views_block__event_registrations_block_1.yml
+++ b/config/sync/default/block.block.views_block__event_registrations_block_1.yml
@@ -20,9 +20,9 @@ settings:
   label: ''
   label_display: visible
   provider: views
-  context_mapping: {  }
   views_label: ''
-  items_per_page: none
+  items_per_page: null
+  context_mapping: {  }
 visibility:
   request_path:
     id: request_path
