--- a/config/sync/default/block.block.views_block__my_registrations_block_2.yml
+++ b/config/sync/default/block.block.views_block__my_registrations_block_2.yml
@@ -21,9 +21,9 @@ settings:
   label: ''
   label_display: '0'
   provider: views
-  context_mapping: {  }
   views_label: ''
-  items_per_page: none
+  items_per_page: null
+  context_mapping: {  }
 visibility:
   request_path:
     id: request_path
