--- a/config/sync/default/editor.editor.full_html.yml
+++ b/config/sync/default/editor.editor.full_html.yml
@@ -39,6 +39,7 @@ settings:
       properties:
         reversed: true
         startIndex: true
+        styles: false
       multiBlock: true
 image_upload:
   status: true
