--- a/config/sync/default/views.view.my_registrations.yml
+++ b/config/sync/default/views.view.my_registrations.yml
@@ -219,10 +219,11 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: false
-          title: ''
-          default_argument_type: current_user
-          default_argument_options: {  }
+          title_enable: true
+          title: 'User {{ arguments.uid }} Registrations:'
+          default_argument_type: user
+          default_argument_options:
+            user: true
           summary_options:
             base_path: ''
             count: true
@@ -280,7 +281,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
         - user.roles
       tags:
         - 'config:field.storage.registration.field_event'
@@ -304,7 +304,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - user
         - user.roles
       tags:
         - 'config:field.storage.registration.field_event'
@@ -517,7 +516,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
         - user.roles
       tags:
         - 'config:field.storage.registration.field_event'
@@ -536,7 +534,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
         - user.roles
       tags:
         - 'config:field.storage.registration.field_event'
